# esdump

./: Cargo.toml  README.md
data/: cti-link-cdr-ib-2020-02-10_0.data
src/: compress.rs  esdump.rs  main.rs
