[package]
name = "esdump"
version = "0.1.0"
authors = ["qianwj <qwjlu@sina.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.1", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"
clap = "2.33.0"
lazy_static = "1.4.0"
flate2 = { version = "1.0.13", features = ["zlib"], default-features = false }
zip = "0.5.4"
walkdir = "2.3.1"